--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ python-dotenv = "^1.0.0"
 langchain = "^0.0.181"
 openai = "^0.27.7"
 pydantic = "^1.10.8"
+python-frontmatter = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 yapf = "^0.33.0"
