--- a/package.json
+++ b/package.json
@@ -1,5 +1,19 @@
 {
   "dependencies": {
+    "svelte-material-ui": "^7.0.0-beta.8",
     "svelte-quill": "^1.2.0"
+  },
+  "devDependencies": {
+    "@material/typography": "^14.0.0",
+    "@mdi/js": "^7.2.96",
+    "@smui/button": "^7.0.0-beta.8",
+    "@smui/card": "^7.0.0-beta.8",
+    "@smui/circular-progress": "^7.0.0-beta.8",
+    "@smui/drawer": "^7.0.0-beta.8",
+    "@smui/icon-button": "^7.0.0-beta.8",
+    "@smui/list": "^7.0.0-beta.8",
+    "add": "^2.0.6",
+    "sass": "^1.62.1",
+    "smui-theme": "^7.0.0-beta.8"
   }
 }
