--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,10 +14,11 @@ python = "^3.11"
 flask = "^2.3.2"
 pytest = "^7.3.1"
 python-dotenv = "^1.0.0"
-langchain = "^0.0.181"
+langchain = "^0.0.183"
 openai = "^0.27.7"
 pydantic = "^1.10.8"
 python-frontmatter = "^1.0.0"
+markdownify = "^0.11.6"
 
 [tool.poetry.group.dev.dependencies]
 yapf = "^0.33.0"
