--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "prismjs": "^1.29.0",
     "svelte-material-ui": "^7.0.0-beta.8",
     "svelte-quill": "^1.2.0"
   },
@@ -10,9 +11,13 @@
     "@smui/card": "^7.0.0-beta.8",
     "@smui/circular-progress": "^7.0.0-beta.8",
     "@smui/drawer": "^7.0.0-beta.8",
+    "@smui/form-field": "^7.0.0-beta.8",
     "@smui/icon-button": "^7.0.0-beta.8",
+    "@smui/layout-grid": "^7.0.0-beta.8",
     "@smui/list": "^7.0.0-beta.8",
+    "@smui/switch": "^7.0.0-beta.8",
     "add": "^2.0.6",
+    "prism-svelte": "^0.5.0",
     "sass": "^1.62.1",
     "smui-theme": "^7.0.0-beta.8"
   }
