--- a/src/client/package.json
+++ b/src/client/package.json
@@ -19,5 +19,8 @@
     "tslib": "^2.5.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.2"
+  },
+  "dependencies": {
+    "@material/typography": "^14.0.0"
   }
 }
